--- a/src/Project/loyal/basic.ipynb
+++ b/src/Project/loyal/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"cust_satisfaction.csv\")"
+    "df = pd.read_csv(\"/UPFLAIR/notebook/data/cust_satisfaction.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[103904 rows x 12 columns]"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "max                 1584.000000  "
       ]
      },
-     "execution_count": 286,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "[103594 rows x 12 columns]"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,16 +810,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "172"
+       "np.int64(172)"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,16 +830,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "array(['Loyal Customer', 'disloyal Customer'], dtype=object)"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "dict_values([1, 0])"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "Name: Customer Type, Length: 103422, dtype: object"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
        "[103422 rows x 12 columns]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "array(['Eco Plus', 'Business', 'Eco'], dtype=object)"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "array(['neutral or dissatisfied', 'satisfied'], dtype=object)"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1273,10 +1273,10 @@
        "       58, 23, 57, 49, 36, 22, 31, 15, 35, 67, 37, 40, 34, 39, 50, 29, 54,\n",
        "       21, 28, 27, 69, 60, 48, 59, 46, 30, 66, 64, 44, 51, 32, 19, 42, 16,\n",
        "       11, 62,  8, 56, 68, 55, 18, 65, 72, 70, 63, 10,  7, 14, 80, 74, 71,\n",
-       "       85, 73, 76, 77, 75, 79, 78], dtype=int64)"
+       "       85, 73, 76, 77, 75, 79, 78])"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
        "array(['Personal Travel', 'Business travel'], dtype=object)"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
        "array(['Male', 'Female'], dtype=object)"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
        "[103422 rows x 12 columns]"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,7 @@
        "[103422 rows x 12 columns]"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
        "[103422 rows x 12 columns]"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2449,7 +2449,7 @@
        "[103422 rows x 12 columns]"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,11 +2464,32 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2482,7 +2503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
