--- a/src/Project/Used_Bikes/Basic.ipynb
+++ b/src/Project/Used_Bikes/Basic.ipynb
@@ -2,29 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in d:\\new folder\\lib\\site-packages (1.4.2)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in d:\\new folder\\lib\\site-packages (from scikit-learn) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in d:\\new folder\\lib\\site-packages (from scikit-learn) (1.13.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in d:\\new folder\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in d:\\new folder\\lib\\site-packages (from scikit-learn) (2.2.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Used_Bikes.csv\")"
+    "df = pd.read_csv(\"/UPFLAIR/notebook/data/Used_Bikes.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +214,7 @@
        "[32648 rows x 8 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +335,7 @@
        "4  First Owner  3.0  150.0         Yamaha  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +394,7 @@
        "Length: 32648, dtype: bool"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +607,7 @@
        "[7324 rows x 6 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +628,7 @@
        "       'Fourth Owner Or More'], dtype=object)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +651,7 @@
        "       'Rajdoot', 'LML', 'Yezdi', 'MV', 'Ideal'], dtype=object)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +839,7 @@
        "[7324 rows x 6 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,16 +868,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([19, 17, 20, ...,  4,  1,  1])"
+       "array([19, 17, 20, ...,  4,  1,  1], shape=(7324,))"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1051,7 @@
        "[7324 rows x 6 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1214,7 @@
        "[7324 rows x 5 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1319,7 @@
        "[7324 rows x 1 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1357,7 @@
        "((5859, 5), (5859, 1), (1465, 5), (1465, 1))"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1377,7 @@
        "(5859, 5)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1415,8 @@
       "text/html": [
        "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
-       "  --sklearn-color-text: black;\n",
+       "  --sklearn-color-text: #000;\n",
+       "  --sklearn-color-text-muted: #666;\n",
        "  --sklearn-color-line: gray;\n",
        "  /* Definition of color scheme for unfitted estimators */\n",
        "  --sklearn-color-unfitted-level-0: #fff5e6;\n",
@@ -1582,12 +1561,21 @@
        "/* Toggleable label */\n",
        "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
-       "  display: block;\n",
+       "  display: flex;\n",
        "  width: 100%;\n",
        "  margin-bottom: 0;\n",
        "  padding: 0.5em;\n",
        "  box-sizing: border-box;\n",
        "  text-align: center;\n",
+       "  align-items: start;\n",
+       "  justify-content: space-between;\n",
+       "  gap: 0.5em;\n",
+       "}\n",
+       "\n",
+       "#sk-container-id-1 label.sk-toggleable__label .caption {\n",
+       "  font-size: 0.6rem;\n",
+       "  font-weight: lighter;\n",
+       "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
        "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
@@ -1740,7 +1728,8 @@
        "  height: 1em;\n",
        "  width: 1em;\n",
        "  text-decoration: none !important;\n",
-       "  margin-left: 1ex;\n",
+       "  margin-left: 0.5em;\n",
+       "  text-align: center;\n",
        "  /* unfitted */\n",
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-unfitted-level-1);\n",
@@ -1839,13 +1828,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LinearRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LinearRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
        "LinearRegression()"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1873,14 +1862,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testing score 0.7175947383086563\n"
+      "testing score 0.7175947383086565\n"
      ]
     }
    ],
@@ -1890,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1899,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1911,10 +1900,10 @@
        "       ...,\n",
        "       [ 37079.00523583],\n",
        "       [238205.04024506],\n",
-       "       [ 36702.67235501]])"
+       "       [ 36702.67235501]], shape=(1465, 1))"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1923,7 @@
        "(1465, 5)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2028,7 @@
        "[1465 rows x 1 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2059,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2154,7 @@
        "[1465 rows x 2 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,18 +2162,11 @@
    "source": [
     "y_test"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2198,7 +2180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
